tests/snapshots/yaml_suite_snapshots__yaml_suite_V55R_med.snap
---
source: tests/yaml_suite_snapshots.rs
expression: med
---
- name: Aliases in Block Sequence
  from: NimYAML tests
  tags: alias sequence
  yaml: "- &a a\n- &b b\n- *a\n- *b\n"
  tree: "+STR\n +DOC\n  +SEQ\n   =VAL &a :a\n   =VAL &b :b\n   =ALI *a\n   =ALI *b\n  -SEQ\n -DOC\n-STR\n"
  json: "[\n  \"a\",\n  \"b\",\n  \"a\",\n  \"b\"\n]\n"
