tests/snapshots/yaml_suite_snapshots__yaml_suite_V55R_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- from: NimYAML tests
  json: "[\n  \"a\",\n  \"b\",\n  \"a\",\n  \"b\"\n]\n"
  name: Aliases in Block Sequence
  tags: alias sequence
  tree: "+STR\n +DOC\n  +SEQ\n   =VAL &a :a\n   =VAL &b :b\n   =ALI *a\n   =ALI *b\n  -SEQ\n -DOC\n-STR\n"
  yaml: "- &a a\n- &b b\n- *a\n- *b\n"
