tests/snapshots/yaml_suite_snapshots__yaml_suite_VJP3_full.snap
---
source: tests/yaml_suite_snapshots.rs
expression: full
---
- name: Flow collections over many lines
  from: "@ingydotnet"
  tags: flow indent
  fail: true
  yaml: "k: {\nk\n:\nv\n}\n"
  tree: "+STR\n +DOC\n  +MAP\n   =VAL :k\n   +MAP {}\n"
- yaml: "k: {\n k\n :\n v\n }\n"
  tree: "+STR\n +DOC\n  +MAP\n   =VAL :k\n   +MAP {}\n    =VAL :k\n    =VAL :v\n   -MAP\n  -MAP\n -DOC\n-STR\n"
  json: "{\n  \"k\" : {\n    \"k\" : \"v\"\n  }\n}\n"
  dump: "---\nk:\n  k: v\n"
  emit: "k:\n  k: v\n"
