tests/snapshots/yaml_suite_snapshots__yaml_suite_W42U_full.snap
---
source: tests/yaml_suite_snapshots.rs
expression: full
---
- name: Spec Example 8.15. Block Sequence Entry Types
  from: "http://www.yaml.org/spec/1.2/spec.html#id2797944"
  tags: comment spec literal sequence
  yaml: "- # Empty\n- |\n block node\n- - one # Compact\n  - two # sequence\n- one: two # Compact mapping\n"
  tree: "+STR\n +DOC\n  +SEQ\n   =VAL :\n   =VAL |block node\\n\n   +SEQ\n    =VAL :one\n    =VAL :two\n   -SEQ\n   +MAP\n    =VAL :one\n    =VAL :two\n   -MAP\n  -SEQ\n -DOC\n-STR\n"
  json: "[\n  null,\n  \"block node\\n\",\n  [\n    \"one\",\n    \"two\"\n  ],\n  {\n    \"one\": \"two\"\n  }\n]\n"
  dump: "-\n- |\n  block node\n- - one\n  - two\n- one: two\n"
