tests/snapshots/yaml_suite_snapshots__yaml_suite_W4TN_full.snap
---
source: tests/yaml_suite_snapshots.rs
expression: full
---
- name: Spec Example 9.5. Directives Documents
  from: "http://www.yaml.org/spec/1.2/spec.html#id2801606"
  tags: spec header footer 1.3-err
  yaml: "%YAML 1.2\n--- |\n%!PS-Adobe-2.0\n...\n%YAML 1.2\n---\n# Empty\n...\n"
  tree: "+STR\n +DOC ---\n  =VAL |%!PS-Adobe-2.0\\n\n -DOC ...\n +DOC ---\n  =VAL :\n -DOC ...\n-STR\n"
  json: "\"%!PS-Adobe-2.0\\n\"\nnull\n"
  dump: "--- |\n  %!PS-Adobe-2.0\n...\n---\n...\n"
